Fixed mobile design unalignment

--- a/style.scss
+++ b/style.scss
@@ -158,7 +158,6 @@ img {
 
 .masthead {
   padding: 20px 0;
-  /*border-bottom: 1px solid $lightGray;*/
 
   @include mobile {
     text-align: center;
@@ -175,10 +174,12 @@ img {
     float: none;
     display: block;
     margin: 0 auto;
+    margin-bottom: 15px;
+    padding: 5px;
   }
 
   img {
-    /*border-radius: 5px;*/
+    border-radius: 5px;
   }
 }
 
